# hw19.2

./: pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_category_options_and_more.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_blog.py  0006_alter_blog_is_published.py  0007_version.py  0008_product_owner.py  0009_product_is_published.py  0010_alter_product_options.py
catalog/templates/catalog/: base.html  blog_list.html  category_list.html  computer.html  contacts.html  home.html  product.html  product_form.html  product_list.html  products.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: catalog_data.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/users/: login.html
